--- a/eas.json
+++ b/eas.json
@@ -6,26 +6,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "android": {
-        "newArchEnabled": true
-      }
+      "distribution": "internal"
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk",
-        "newArchEnabled": true
+        "buildType": "apk"
       },
       "env": {
         "NPM_CONFIG_LEGACY_PEER_DEPS": "true"
       }
     },
     "production": {
-      "autoIncrement": true,
-      "android": {
-        "newArchEnabled": true
-      }
+      "autoIncrement": true
     }
   },
   "submit": {
