chore: downgrade to stable expo sdk 52 and align android config

--- a/app.json
+++ b/app.json
@@ -69,10 +69,11 @@
         "expo-build-properties",
         {
           "ios": {
-            "deploymentTarget": "17.5"
+            "deploymentTarget": "15.1"
           },
           "android": {
-            "compileSdkVersion": 35
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34
           }
         }
       ],
