--- a/package.json
+++ b/package.json
@@ -11,60 +11,60 @@
   "dependencies": {
     "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.4.2",
-    "@expo/vector-icons": "^14.0.3",
+    "@expo/vector-icons": "^15.0.3",
     "@mosaicag/swap-widget": "^1.1.11",
     "@privy-io/expo": "^0.58.1",
     "@privy-io/expo-native-extensions": "^0.0.5",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "buffer": "^6.0.3",
-    "expo": "~52.0.30",
-    "expo-apple-authentication": "~7.0.1",
-    "expo-application": "~6.0.2",
-    "expo-av": "~15.0.1",
-    "expo-blur": "~14.0.1",
-    "expo-build-properties": "~0.13.1",
-    "expo-camera": "~16.0.10",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.3",
-    "expo-crypto": "~14.0.1",
-    "expo-dev-client": "~5.0.11",
-    "expo-font": "~13.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.4",
-    "expo-local-authentication": "~16.0.1",
-    "expo-localization": "~16.0.1",
-    "expo-router": "~4.0.15",
-    "expo-secure-store": "~14.0.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~54.0.23",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-application": "~7.0.7",
+    "expo-av": "~16.0.7",
+    "expo-blur": "^15.0.7",
+    "expo-build-properties": "^1.0.10",
+    "expo-camera": "^17.0.10",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "^6.0.18",
+    "expo-font": "~14.0.9",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-local-authentication": "~17.0.7",
+    "expo-localization": "^17.0.7",
+    "expo-router": "~6.0.14",
+    "expo-secure-store": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "fast-text-encoding": "^1.0.6",
     "i18next": "^25.6.2",
-    "react": "18.3.1",
+    "react": "19.1.0",
     "react-i18next": "^16.2.4",
-    "react-native": "0.76.5",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-passkeys": "^0.3.3",
     "react-native-qr-svg": "^1.5.0",
     "react-native-qrcode-styled": "^0.4.0",
     "react-native-qrcode-svg": "^6.3.20",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-svg": "15.8.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.7.1",
     "react-native-worklets-core": "^1.6.2",
     "viem": "^2.38.6"
   },
   "devDependencies": {
-    "@types/react": "~18.3.12",
-    "babel-preset-expo": "~11.0.0",
+    "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.7",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "typescript": "~5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
