--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@aptos-labs/ts-sdk": "^5.2.1",
     "@ethersproject/shims": "^5.8.0",
     "@expo-google-fonts/inter": "^0.4.2",
     "@expo/vector-icons": "^15.0.3",
     "@mosaicag/swap-widget": "^1.1.11",
-    "@privy-io/expo": "^0.58.1",
-    "@privy-io/expo-native-extensions": "^0.0.5",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@types/bip39": "^2.4.2",
+    "bip39": "^3.1.0",
     "buffer": "^6.0.3",
+    "ed25519-hd-key": "^1.3.0",
     "expo": "~54.0.23",
     "expo-apple-authentication": "~8.0.7",
     "expo-application": "~7.0.7",
@@ -33,12 +35,14 @@
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "~17.0.7",
     "expo-localization": "^17.0.7",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.9",
     "fast-text-encoding": "^1.0.6",
     "i18next": "^25.6.2",
+    "iso-639-1": "^3.1.5",
     "react": "19.1.0",
     "react-i18next": "^16.2.4",
     "react-native": "0.81.5",
@@ -58,6 +62,7 @@
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.7.1",
     "react-native-worklets-core": "^1.6.2",
+    "tweetnacl": "^1.0.3",
     "viem": "^2.38.6"
   },
   "devDependencies": {
