--- a/app.json
+++ b/app.json
@@ -60,7 +60,13 @@
       "expo-router",
       "expo-secure-store",
       "expo-apple-authentication",
-      "expo-notifications",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/AppIcon.png",
+          "color": "#ffda34"
+        }
+      ],
       "expo-camera",
       "expo-local-authentication",
       [
