--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@mosaicag/swap-widget": "^1.1.11",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@types/bip39": "^2.4.2",
+    "@types/bs58": "^4.0.4",
+    "@types/node": "^25.2.2",
     "bip39": "^3.1.0",
+    "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "ed25519-hd-key": "^1.3.0",
     "expo": "~54.0.23",
@@ -39,7 +42,7 @@
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo-web-browser": "~15.0.10",
     "fast-text-encoding": "^1.0.6",
     "i18next": "^25.6.2",
     "iso-639-1": "^3.1.5",
@@ -57,6 +60,7 @@
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
