--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-crypto": "~15.0.7",
     "expo-dev-client": "^6.0.18",
     "expo-font": "~14.0.9",
+    "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "~17.0.7",
@@ -54,8 +55,6 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-passkeys": "^0.3.3",
     "react-native-qr-svg": "^1.5.0",
-    "react-native-qrcode-styled": "^0.4.0",
-    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
