--- a/example-native/example-app/.gitignore
+++ b/example-native/example-app/.gitignore
@@ -20,8 +20,7 @@ expo-env.d.ts
 
 # Metro
 .metro-health-check*
-expo-backend/
-.claude/
+
 # debug
 npm-debug.*
 yarn-debug.*
@@ -32,17 +31,13 @@ yarn-error.*
 *.pem
 
 # local env files
-.env
 .env*.local
-expo-backend/.env
 
 # typescript
 *.tsbuildinfo
 
+app-example
+
 # generated native folders
 /ios
 /android
-
-# local development
-
-
