Finalize Column Wallet SDK integration, redundant UI removal, and notification stability fixes

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/Column.png",
+      "image": "./assets/Collumn-Login.png",
       "resizeMode": "contain",
       "backgroundColor": "#121315"
     },
