--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "expo": "~54.0.23",
     "expo-apple-authentication": "~8.0.7",
     "expo-application": "~7.0.7",
-    "expo-av": "~16.0.7",
+    "expo-audio": "~1.1.1",
     "expo-blur": "^15.0.7",
     "expo-build-properties": "^1.0.10",
     "expo-camera": "^17.0.10",
